--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,3 +1,4 @@
 <div class="ui segment">
   <%= link_to "个人用户登录", new_user_session_path, class: 'ui button green' %>
+  <%= link_to "管理人员登录", new_admin_session_path, class: 'ui button red' %>
 </div>
