--- a/app/views/admin/welcome/index.html.erb
+++ b/app/views/admin/welcome/index.html.erb
@@ -1,6 +1,6 @@
 <h1>Admin::Welcome#index</h1>
 <p>Find me in app/views/admin/welcome/index.html.erb</p>
 <div class="ui segment">
-  <%= link_to "文章管理", '#', class: 'ui button teal' %>
+  <%= link_to "文章管理", admin_articles_path, class: 'ui button teal' %>
   <%= link_to "评论管理", '#', class: 'ui button teal' %>
 </div>
