--- a/app/views/user/welcome/index.html.erb
+++ b/app/views/user/welcome/index.html.erb
@@ -1,2 +1,3 @@
-<h1>User::Welcome#index</h1>
-<p>Find me in app/views/user/welcome/index.html.erb</p>
+<div class="ui segment">
+  <%= link_to "所有文章", user_articles_path, class: 'ui button teal' %>
+</div>
