--- a/app/views/admin/welcome/index.html.erb
+++ b/app/views/admin/welcome/index.html.erb
@@ -2,5 +2,6 @@
 <p>Find me in app/views/admin/welcome/index.html.erb</p>
 <div class="ui segment">
   <%= link_to "文章管理", admin_articles_path, class: 'ui button teal' %>
+  <%= link_to "文章分类管理", admin_article_types_path, class: 'ui button teal' %>
   <%= link_to "评论管理", '#', class: 'ui button teal' %>
 </div>
