--- a/app/views/layouts/user.html.erb
+++ b/app/views/layouts/user.html.erb
@@ -16,6 +16,7 @@
   <div class="ui segment inverted green">
     <div class="ui grid page">
       <div class="ui menu inverted green">
+        <%= link_to '首页', user_root_path, class: 'item' %>
         <%= link_to '个人用户资料', '#', class: 'item' %>
         <div class="right menu">
           <div class="ui dropdown item">
