--- a/app/views/admin/articles/edit.html.erb
+++ b/app/views/admin/articles/edit.html.erb
@@ -2,6 +2,5 @@
 <div class="ui segment">
   <%= render partial: 'layouts/errors', locals: {title:'修改失败', error: @article} %>
   <%= render 'form' %>
-  <%= link_to 'Show', [:admin,@article], class: 'ui button green' %> |
-  <%= link_to 'Back', admin_articles_path, class: 'ui button red' %>
+  <%= link_to t("action.back"), admin_articles_path, class: 'ui button red' %>
 </div>
